--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.16.13",
+    "axios": "^0.24.0",
+    "mapbox-gl": "^2.5.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
