--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.16.0",
+    "@react-three/fiber": "^8.0.27",
     "antd": "^4.16.13",
     "axios": "^0.24.0",
     "mapbox-gl": "^2.5.1",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^12.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.142.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
