--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "three": "^0.142.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.11.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2"
   }
